
\name{NEWS}
\title{NEWS file for the tram package}

\section{Changes in Version 0.2-1 (2018-03-xx)}{
  \itemize{
    \item{Remove strata from linear predictor (experimental).}
    \item{Try to implement a better guess for the \code{add} argument
          later defining the axes corresponding to the response
          in plots.}
  }
}

\section{Changes in Version 0.2-0 (2018-02-25)}{
  \itemize{
    \item{\pkg{tram} first published on CRAN.}
  }
}
