@@ -1,7 +1,7 @@
 Package: tram
 Title: Transformation Models
 Version: 0.2-1
-Date: 2018-03-08
+Date: 2018-03-20
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))
 Description: Formula-based user-interfaces to specific transformation models
@@ -10,8 +10,10 @@ Description: Formula-based user-interfaces to specific transformation models
   normal and non-normal (Box-Cox type) linear models, and continuous outcome logistic regression
   (Lohse et al., 2017, <DOI:10.12688/f1000research.12934.1>). The underlying theory
   is described in Hothorn et al. (2018) <DOI:10.1111/sjos.12291>.
-Depends: mlt (>= 0.2-1)
-Imports: Formula, multcomp, variables, basefun (>= 0.0-40), sandwich, stats, survival, graphics
-Suggests: MASS, TH.data, trtf, mlbench, knitr, quantreg, ordinal, colorspace, ATR
+Depends: mlt (>= 1.0-1)
+Imports: Formula, multcomp, variables (>= 1.0-0), basefun (>= 1.0-0), 
+  sandwich, stats, survival, graphics
+Suggests: MASS, TH.data, trtf, mlbench, knitr, quantreg, ordinal, 
+  colorspace, ATR
 VignetteBuilder: knitr
 License: GPL-2
